@@ -1,3 +1,7 @@
+2011-09-28  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* Makefile.am: add various missing csv/*.csv files to dist list.
+
 2011-09-17  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* csv/*.csv: Upgrade to EPSG 7.9.
